@@ -14,6 +14,8 @@ require 'uri'
 require 'rubygems/package'
 require 'rubygems/test_utilities'
 require 'pp'
+require 'yaml'
+YAML::ENGINE.yamler = 'psych' if YAML.const_defined? :ENGINE
 
 begin
   gem 'rdoc'
